Fixed link element on mobile.

--- a/src/assets/scss/components/_details.scss
+++ b/src/assets/scss/components/_details.scss
@@ -44,7 +44,7 @@
 
     a,
     span {
-      display: block;
+      display: inline-block;
       font-size: 1.25em;
     }
 
